Feat: adding auth support with bearer JWT token
